--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -19,7 +19,7 @@ body {
     transform: translate(-50%, -50%);
     width: 400px;
     height: 310px;
-    background-color: pink;
+    background-color: white;
 }
 
 .title-box {
